--- a/blog-01.html
+++ b/blog-01.html
@@ -83,7 +83,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -102,7 +102,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Understanding Modern Network Security Practices in 2025</h2>
               
               <div class="content">
-                <p class="lead">As we navigate the complexities of 2025, the digital landscape has transformed into a decentralized, AI-driven environment. Protecting corporate assets now requires a shift from static defenses to a dynamic, resilient architecture. This guide explores the nine pillars of modern network security.</p>
+                <p>As we navigate the complexities of 2025, the digital landscape has transformed into a decentralized, AI-driven environment. Protecting corporate assets now requires a shift from static defenses to a dynamic, resilient architecture. This guide explores the nine pillars of modern network security.</p>
 
                 <h3>1. The End of the Traditional Perimeter — Zero Trust as the New Norm</h3>
                 <p>Zero Trust Architecture (ZTA) is no longer a niche concept — it’s become the foundational security model for modern networks. The core principle is <strong>“never trust, always verify”</strong>: every user, device, and app must be continuously authenticated and authorized, regardless of network location.</p>
