--- a/blog-06.html
+++ b/blog-06.html
@@ -85,7 +85,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -104,7 +104,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Firewall Rules Optimization for High Traffic Networks</h2>
               
               <div class="content">
-                <p class="lead">In high-traffic environments, firewall performance is measured in microseconds. As data volumes surge in 2026, a poorly ordered rulebase can become a massive bottleneck, leading to latency spikes and hardware exhaustion. This guide explores how to optimize rule processing for maximum throughput.</p>
+                <p>In high-traffic environments, firewall performance is measured in microseconds. As data volumes surge in 2026, a poorly ordered rulebase can become a massive bottleneck, leading to latency spikes and hardware exhaustion. This guide explores how to optimize rule processing for maximum throughput.</p>
 
                 <h3>1. The Logic of Rule Sequencing</h3>
                 <p>Firewalls typically process rules in a linear, top-down fashion. If your most frequently hit rule is at position #100, the firewall must perform 99 unnecessary comparisons for every packet in that stream. By moving high-traffic rules to the top, you drastically reduce the CPU cycles required per packet.</p>
