--- a/blog-08.html
+++ b/blog-08.html
@@ -85,7 +85,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -104,7 +104,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Active Directory Security Hardening Checklist</h2>
               
               <div class="content">
-                <p class="lead">Active Directory (AD) is the primary target for 90% of enterprise ransomware attacks. If an attacker gains Domain Admin privileges, the game is over. In 2026, securing AD requires moving beyond basic password policies to a comprehensive Tiered Administration model.</p>
+                <p>Active Directory (AD) is the primary target for 90% of enterprise ransomware attacks. If an attacker gains Domain Admin privileges, the game is over. In 2026, securing AD requires moving beyond basic password policies to a comprehensive Tiered Administration model.</p>
 
                 <h3>1. Implementing the Tiered Administration Model</h3>
                 <p>The most critical step in AD hardening is preventing "Credential Theft." Tiered administration ensures that high-privilege credentials (like Domain Admins) are never exposed on lower-security workstations where an attacker might be lurking.</p>
