--- a/blog-09.html
+++ b/blog-09.html
@@ -78,7 +78,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -97,7 +97,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Cloud vs On-Prem: Choosing the Right Infrastructure</h2>
               
               <div class="content">
-                <p class="lead">The debate is no longer about which is "better," but which is "right" for your specific workload. In 2026, the rise of Cloud Repatriation and sophisticated Hybrid models has changed the decision-making matrix for IT leaders.</p>
+                <p>The debate is no longer about which is "better," but which is "right" for your specific workload. In 2026, the rise of Cloud Repatriation and sophisticated Hybrid models has changed the decision-making matrix for IT leaders.</p>
 
                 <h3>1. Understanding the Core Difference</h3>
                 <p>On-premises infrastructure gives you total control but places the entire burden of maintenance, power, cooling, and hardware lifecycle on your team. Cloud infrastructure trades that control for speed, infinite scalability, and a shift from Capital Expenditure (CapEx) to Operational Expenditure (OpEx).</p>
