--- a/blog-10.html
+++ b/blog-10.html
@@ -85,7 +85,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -104,7 +104,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">The Modern Network Engineer’s Guide to Building Resilient Infrastructure</h2>
               
               <div class="content">
-                <p class="lead">In 2026, resilience isn't just about "uptime"—it's about the network's ability to self-heal, resist attacks, and degrade gracefully. The shift from manual CLI-driven configurations to Infrastructure as Code (IaC) has redefined the gold standard for network engineering.</p>
+                <p>In 2026, resilience isn't just about "uptime"—it's about the network's ability to self-heal, resist attacks, and degrade gracefully. The shift from manual CLI-driven configurations to Infrastructure as Code (IaC) has redefined the gold standard for network engineering.</p>
 
                 <h3>1. High Availability (HA) vs. Fault Tolerance</h3>
                 <p>Resilience starts at the physical and logical layers. While <strong>High Availability</strong> aims for 99.999% uptime through redundant components, <strong>Fault Tolerance</strong> ensures zero downtime during a failure. Modern designs leverage Multi-Chassis EtherChannel (MCEC) and Virtual Port Channels (vPC) to ensure that if one switch fails, the traffic flow remains uninterrupted.</p>
