--- a/blog-11.html
+++ b/blog-11.html
@@ -83,7 +83,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -102,7 +102,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">From LAN to Cloud: How Networking Has Evolved in the Hybrid Era</h2>
               
               <div class="content">
-                <p class="lead">Networking is no longer confined to the four walls of a data center. In 2026, the traditional Local Area Network (LAN) has morphed into a sprawling, global ecosystem where the line between "internal" and "external" infrastructure has vanished.</p>
+                <p>Networking is no longer confined to the four walls of a data center. In 2026, the traditional Local Area Network (LAN) has morphed into a sprawling, global ecosystem where the line between "internal" and "external" infrastructure has vanished.</p>
 
                 <h3>1. The Death of the Perimeter</h3>
                 <p>Ten years ago, networking was about building "moats" (firewalls) around your "castle" (LAN). Today, users work from anywhere, and applications live in multiple clouds. This shift has forced the evolution from hardware-defined perimeters to <strong>Software-Defined WAN (SD-WAN)</strong> and <strong>SASE (Secure Access Service Edge)</strong>.</p>
