--- a/blog-13.html
+++ b/blog-13.html
@@ -84,7 +84,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -103,7 +103,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Designing High-Availability Networks for Enterprise Environments</h2>
               
               <div class="content">
-                <p class="lead">In the enterprise world, "downtime" is the most expensive word in the dictionary. High Availability (HA) is no longer just about adding a second power supply; it’s about a multi-layered design philosophy that ensures the network remains operational despite hardware failures, software bugs, or human error.</p>
+                <p>In the enterprise world, "downtime" is the most expensive word in the dictionary. High Availability (HA) is no longer just about adding a second power supply; it’s about a multi-layered design philosophy that ensures the network remains operational despite hardware failures, software bugs, or human error.</p>
 
                 <h3>1. The Three Layers of Redundancy</h3>
                 <p>A resilient HA design addresses redundancy at three distinct levels:</p>
