--- a/blog-14.html
+++ b/blog-14.html
@@ -83,7 +83,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -102,7 +102,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Software-Defined Networking (SDN): The Backbone of Modern Infrastructure</h2>
               
               <div class="content">
-                <p class="lead">The days of managing networks "one box at a time" are long gone. In 2026, Software-Defined Networking (SDN) has matured into the standard operational model for cloud providers and enterprises alike, decoupling the intelligence of the network from the physical hardware.</p>
+                <p>The days of managing networks "one box at a time" are long gone. In 2026, Software-Defined Networking (SDN) has matured into the standard operational model for cloud providers and enterprises alike, decoupling the intelligence of the network from the physical hardware.</p>
 
                 <h3>1. Decoupling the Control Plane from the Data Plane</h3>
                 <p>The fundamental innovation of SDN is the separation of the <strong>Control Plane</strong> (the brain that makes routing decisions) from the <strong>Data Plane</strong> (the muscle that forwards packets). By centralizing the control plane in a software controller, administrators gain a "God's eye view" of the entire network.</p>
