--- a/blog-15.html
+++ b/blog-15.html
@@ -75,7 +75,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -94,7 +94,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Active Directory in the Modern Enterprise: Best Practices and Security</h2>
               
               <div class="content">
-                <p class="lead">Active Directory (AD) has been the heart of enterprise identity for over two decades. However, the rise of cloud computing and remote work has forced a radical shift in how we manage and secure it. In 2026, a "set it and forget it" approach to AD is a recipe for disaster.</p>
+                <p>Active Directory (AD) has been the heart of enterprise identity for over two decades. However, the rise of cloud computing and remote work has forced a radical shift in how we manage and secure it. In 2026, a "set it and forget it" approach to AD is a recipe for disaster.</p>
 
                 <h3>1. The Evolution: Hybrid Identity</h3>
                 <p>Modern enterprises no longer run on-premises AD in isolation. The standard is now <strong>Hybrid Identity</strong>, where local AD is synced with cloud identity providers like Microsoft Entra ID (formerly Azure AD). This allows users to use a single set of credentials for both their local workstation and SaaS apps like Office 365 or Salesforce.</p>
