--- a/blog-16.html
+++ b/blog-16.html
@@ -76,7 +76,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -95,7 +95,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Managing Windows Servers at Scale with PowerShell Automation</h2>
               
               <div class="content">
-                <p class="lead">In 2026, logging into a server via RDP to change a setting isn't just inefficient—it's an anti-pattern. As infrastructures grow into hundreds or thousands of nodes, PowerShell has evolved from a simple shell into a robust automation engine capable of orchestrating complex enterprise environments.</p>
+                <p>In 2026, logging into a server via RDP to change a setting isn't just inefficient—it's an anti-pattern. As infrastructures grow into hundreds or thousands of nodes, PowerShell has evolved from a simple shell into a robust automation engine capable of orchestrating complex enterprise environments.</p>
 
                 <h3>1. PowerShell Remoting: The Foundation</h3>
                 <p>The secret to managing servers at scale is <strong>WinRM (Windows Remote Management)</strong>. By using <code>Invoke-Command</code>, you can run a script block on 500 servers simultaneously. In modern environments, we leverage <strong>PowerShell 7.x</strong> for its cross-platform capabilities and the <code>-Parallel</code> switch in <code>ForEach-Object</code> to drastically reduce execution time.</p>
