--- a/blog-17.html
+++ b/blog-17.html
@@ -76,7 +76,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -95,7 +95,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Hardening Windows Server: Security Baselines and Real-World Techniques</h2>
               
               <div class="content">
-                <p class="lead">A "default" installation of Windows Server is a playground for attackers. Hardening is the process of reducing the attack surface by removing unnecessary services, closing ports, and enforcing strict security policies. In 2026, this is not optional—it is the foundation of cyber resilience.</p>
+                <p>A "default" installation of Windows Server is a playground for attackers. Hardening is the process of reducing the attack surface by removing unnecessary services, closing ports, and enforcing strict security policies. In 2026, this is not optional—it is the foundation of cyber resilience.</p>
 
                 <h3>1. Start with Microsoft Security Baselines</h3>
                 <p>Microsoft provides recommended configuration settings in their <strong>Security Baselines</strong>. Using the Security Compliance Toolkit (SCT), you can compare your current GPOs against these industry standards and apply thousands of pre-configured security settings instantly.</p>
