--- a/blog-19.html
+++ b/blog-19.html
@@ -74,7 +74,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -93,7 +93,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Linux Server Administration Essentials for Modern IT Environments</h2>
               
               <div class="content">
-                <p class="lead">If Windows Server is the "desk" of the modern office, Linux is the "engine" under the hood of the global digital economy. From cloud-native microservices to enterprise databases, mastering Linux administration is the most versatile skill an IT professional can possess in 2026.</p>
+                <p>If Windows Server is the "desk" of the modern office, Linux is the "engine" under the hood of the global digital economy. From cloud-native microservices to enterprise databases, mastering Linux administration is the most versatile skill an IT professional can possess in 2026.</p>
 
                 <h3>1. Mastering the Filesystem Hierarchy</h3>
                 <p>Unlike Windows, where everything lives in <code>C:\</code>, Linux follows the <strong>Filesystem Hierarchy Standard (FHS)</strong>. Understanding where configurations (<code>/etc</code>), logs (<code>/var/log</code>), and binaries (<code>/bin</code>, <code>/usr/bin</code>) reside is critical for troubleshooting.</p>
