--- a/blog-20.html
+++ b/blog-20.html
@@ -74,7 +74,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -93,7 +93,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Building Secure and Scalable Linux Servers for Production</h2>
               
               <div class="content">
-                <p class="lead">Deploying a Linux server is easy; deploying a <strong>production-grade</strong> Linux server that can withstand an attack while scaling to meet user demand is an art form. In 2026, production environments demand a "security-first, automate-everything" mindset.</p>
+                <p>Deploying a Linux server is easy; deploying a <strong>production-grade</strong> Linux server that can withstand an attack while scaling to meet user demand is an art form. In 2026, production environments demand a "security-first, automate-everything" mindset.</p>
 
                 <h3>1. Hardening the OS with CIS Benchmarks</h3>
                 <p>Security starts with the <strong>CIS (Center for Internet Security) Benchmarks</strong>. These are internationally recognized best practices for hardening Linux. This includes partitioning schemes (keeping <code>/var</code> and <code>/tmp</code> on separate partitions to prevent disk-fill attacks) and ensuring that kernel parameters are tuned to prevent IP spoofing.</p>
