--- a/blog-21.html
+++ b/blog-21.html
@@ -74,7 +74,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -93,7 +93,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Systemd, SELinux, and Firewalld: Mastering Linux Server Security</h2>
               
               <div class="content">
-                <p class="lead">For many administrators, SELinux is something to be "disabled" and Firewalld is a "nuisance." However, in a 2026 threat landscape, these three pillars are what stand between a secure production environment and a total breach. Let’s break down how they work together.</p>
+                <p>For many administrators, SELinux is something to be "disabled" and Firewalld is a "nuisance." However, in a 2026 threat landscape, these three pillars are what stand between a secure production environment and a total breach. Let’s break down how they work together.</p>
 
                 <h3>1. Systemd: More Than a Service Manager</h3>
                 <p>Systemd is often criticized for its complexity, but from a security standpoint, its <strong>Unit File Directives</strong> are revolutionary. You can sandbox services directly in their configuration files, preventing a compromised web server from accessing the rest of the system.</p>
