--- a/blog-22.html
+++ b/blog-22.html
@@ -74,7 +74,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -93,7 +93,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Linux Networking Deep Dive: Bridges, Bonds, and Virtual Interfaces</h2>
               
               <div class="content">
-                <p class="lead">Underneath the hood of every Kubernetes cluster, virtual machine host, or cloud gateway lies the Linux Networking Stack. In 2026, understanding how to manipulate packets at the kernel level using virtual interfaces is what separates a System Admin from a Cloud Architect.</p>
+                <p>Underneath the hood of every Kubernetes cluster, virtual machine host, or cloud gateway lies the Linux Networking Stack. In 2026, understanding how to manipulate packets at the kernel level using virtual interfaces is what separates a System Admin from a Cloud Architect.</p>
 
                 <h3>1. NIC Bonding: Resilience and Aggregate Bandwidth</h3>
                 <p>Bonding (or Link Aggregation) allows you to treat multiple physical interfaces as one logical link. Whether you use <strong>Mode 1 (Active-Backup)</strong> for pure redundancy or <strong>Mode 4 (802.3ad/LACP)</strong> for high-speed trunking, bonding ensures your server stays connected even if a cable is pulled or a switch port fails.</p>
