--- a/blog-23.html
+++ b/blog-23.html
@@ -73,7 +73,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -92,7 +92,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Why Linux Continues to Dominate Cloud and DevOps Infrastructure</h2>
               
               <div class="content">
-                <p class="lead">If you look at the architecture of the modern internet in 2026, it is painted in the colors of the Linux kernel. Over 90% of the world's top 1 million web servers and nearly 100% of the world's supercomputers run on Linux. But why does this open-source pioneer continue to crush the competition in the cloud?</p>
+                <p>If you look at the architecture of the modern internet in 2026, it is painted in the colors of the Linux kernel. Over 90% of the world's top 1 million web servers and nearly 100% of the world's supercomputers run on Linux. But why does this open-source pioneer continue to crush the competition in the cloud?</p>
 
                 <h3>1. The Native Home of Containers</h3>
                 <p>DevOps is synonymous with <strong>Containerization</strong>. Technologies like Docker and Kubernetes aren't just compatible with Linux; they are built upon Linux-specific kernel features like <strong>Cgroups</strong> and <strong>Namespaces</strong>. While Windows Containers exist, Linux remains the native, highest-performance environment for microservices orchestration.</p>
