--- a/blog-24.html
+++ b/blog-24.html
@@ -72,7 +72,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -91,7 +91,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Zero Trust Networking: Redefining Security in a Perimeter-Less World</h2>
               
               <div class="content">
-                <p class="lead">The traditional "castle-and-moat" security strategy is dead. In an era of remote work, cloud migration, and sophisticated cyber threats, the internal network is no longer a "trusted" zone. Enter Zero Trust: the philosophy of "Never Trust, Always Verify."</p>
+                <p>The traditional "castle-and-moat" security strategy is dead. In an era of remote work, cloud migration, and sophisticated cyber threats, the internal network is no longer a "trusted" zone. Enter Zero Trust: the philosophy of "Never Trust, Always Verify."</p>
 
                 <h3>1. The Core Principles of Zero Trust</h3>
                 <p>Zero Trust shifts the focus from network location to individual users and assets. It operates on three main pillars:</p>
