--- a/blog-26.html
+++ b/blog-26.html
@@ -77,7 +77,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -96,7 +96,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Microsegmentation and Network Isolation: Limiting the Blast Radius</h2>
               
               <div class="content">
-                <p class="lead">In traditional network design, once an attacker breaches the perimeter, they often find a "flat" internal network where lateral movement is trivial. In 2026, the strategy has shifted from protecting the border to isolating every individual workload.</p>
+                <p>In traditional network design, once an attacker breaches the perimeter, they often find a "flat" internal network where lateral movement is trivial. In 2026, the strategy has shifted from protecting the border to isolating every individual workload.</p>
 
                 <h3>1. What is Microsegmentation?</h3>
                 <p>Microsegmentation is a security technique that enables fine-grained security policies to be assigned to individual data center workloads. Unlike traditional segmentation, which uses hardware firewalls and VLANs to divide a network into large chunks, microsegmentation uses software-defined networking (SDN) to isolate every single virtual machine (VM), container, or bare-metal server.</p>
