--- a/blog-28.html
+++ b/blog-28.html
@@ -77,7 +77,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -96,7 +96,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Securing Hybrid Networks: On-Prem, Cloud, and Remote Users</h2>
               
               <div class="content">
-                <p class="lead">In 2026, the term "network" refers to a sprawling ecosystem of local data centers, multiple public clouds, and a highly mobile workforce. This hybrid reality has created a massive attack surface that traditional VPN strategies can no longer manage.</p>
+                <p>In 2026, the term "network" refers to a sprawling ecosystem of local data centers, multiple public clouds, and a highly mobile workforce. This hybrid reality has created a massive attack surface that traditional VPN strategies can no longer manage.</p>
 
                 <h3>1. The Hybrid Complexity Challenge</h3>
                 <p>Hybrid networking introduces "visibility gaps." When traffic moves between an on-premise server and a cloud-based Kubernetes cluster, security policies often become fragmented. Attackers exploit these gaps, using them as blind spots to move laterally through the organization.</p>
