--- a/blog-29.html
+++ b/blog-29.html
@@ -77,7 +77,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -96,7 +96,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">SASE Explained: Merging Networking and Security in the Cloud Era</h2>
               
               <div class="content">
-                <p class="lead">For decades, networking and security were treated as separate silos. One team built the pipes, and the other team guarded them. In 2026, the Secure Access Service Edge (SASE) model has officially unified these worlds into a single, cloud-native architecture.</p>
+                <p>For decades, networking and security were treated as separate silos. One team built the pipes, and the other team guarded them. In 2026, the Secure Access Service Edge (SASE) model has officially unified these worlds into a single, cloud-native architecture.</p>
 
                 <h3>1. What is SASE?</h3>
                 <p>SASE (pronounced "sassy") is an architectural framework that converges <strong>Software-Defined Wide Area Networking (SD-WAN)</strong> with comprehensive security functions, delivered entirely through a distributed cloud service. Instead of routing traffic back to a centralized data center for inspection, SASE inspects traffic at the "service edge"—as close to the user as possible.</p>
