--- a/blog-30.html
+++ b/blog-30.html
@@ -78,7 +78,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -97,7 +97,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Designing Enterprise Networks for Performance, Security, and Scale</h2>
               
               <div class="content">
-                <p class="lead">In 2026, the network is no longer a "plumbing" system. It is a programmable fabric that serves as the nervous system for AI-driven enterprise operations. This guide explores the architectural shifts required to handle modern density, speed, and threat landscapes.</p>
+                <p>In 2026, the network is no longer a "plumbing" system. It is a programmable fabric that serves as the nervous system for AI-driven enterprise operations. This guide explores the architectural shifts required to handle modern density, speed, and threat landscapes.</p>
 
                 <h3>1. The Shift to Intent-Based Networking (IBN)</h3>
                 <p>The days of manual CLI-based configuration for thousands of devices are over. <strong>Intent-Based Networking (IBN)</strong> allows engineers to define a business outcome (e.g., "Allow Finance to reach Cloud-ERP with sub-10ms latency"), and the controller automatically translates that into network-wide configurations. This reduces human error by up to 80% and ensures <strong>Continuous Compliance</strong>.</p>
