--- a/blog-03.html
+++ b/blog-03.html
@@ -84,7 +84,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -103,7 +103,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Windows Server 2025: What's New for IT Admins</h2>
               
               <div class="content">
-                <p class="lead">Microsoft has officially positioned Windows Server 2025 as the bridge between on-premises stability and cloud-native agility. For IT professionals, this release isn't just a minor update; it's a significant overhaul focusing on Hotpatching, enhanced NVMe storage, and identity security.</p>
+                <p>Microsoft has officially positioned Windows Server 2025 as the bridge between on-premises stability and cloud-native agility. For IT professionals, this release isn't just a minor update; it's a significant overhaul focusing on Hotpatching, enhanced NVMe storage, and identity security.</p>
 
                 <h3>1. Hotpatching: The End of Maintenance Windows?</h3>
                 <p>One of the most anticipated features in Windows Server 2025 is <strong>Hotpatching for Everyone</strong>. Previously restricted to specific Azure editions, Hotpatching allows admins to apply security updates to the OS memory without requiring a reboot.</p>
