--- a/blog-04.html
+++ b/blog-04.html
@@ -84,7 +84,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -103,7 +103,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Implementing Zero Trust in Enterprise Networks</h2>
               
               <div class="content">
-                <p class="lead">Zero Trust is no longer a buzzword; it is a mandatory architectural response to the dissolution of the traditional network perimeter. This guide provides a technical roadmap for moving from a legacy "trust-but-verify" model to a modern "never-trust-always-verify" infrastructure.</p>
+                <p>Zero Trust is no longer a buzzword; it is a mandatory architectural response to the dissolution of the traditional network perimeter. This guide provides a technical roadmap for moving from a legacy "trust-but-verify" model to a modern "never-trust-always-verify" infrastructure.</p>
 
                 <h3>1. Defining the Protect Surface</h3>
                 <p>In traditional security, we focus on the Attack Surface (everything that can be breached). In Zero Trust, we flip the script and identify the <strong>Protect Surface</strong>. This consists of the most critical DAAS elements: Data, Applications, Assets, and Services.</p>
