--- a/blog-05.html
+++ b/blog-05.html
@@ -85,7 +85,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -104,7 +104,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Linux Server Hardening Best Practices</h2>
               
               <div class="content">
-                <p class="lead">In 2026, the Linux security landscape has evolved to face AI-driven brute force and complex kernel-level exploits. Relying on default configurations is a recipe for disaster. This guide covers the essential hardening steps to secure your production Linux environments.</p>
+                <p>In 2026, the Linux security landscape has evolved to face AI-driven brute force and complex kernel-level exploits. Relying on default configurations is a recipe for disaster. This guide covers the essential hardening steps to secure your production Linux environments.</p>
 
                 <h3>1. System Minimization and Baseline Auditing</h3>
                 <p>The first rule of hardening is: <strong>If you don't need it, remove it.</strong> Every installed package is a potential entry point for an attacker. Start by listing all active services and removing legacy protocols like Telnet, FTP, or Rsh.</p>
