--- a/blog-07.html
+++ b/blog-07.html
@@ -85,7 +85,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -104,7 +104,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Monitoring Network Performance with SNMP & Grafana</h2>
               
               <div class="content">
-                <p class="lead">Raw data is useless without visualization. In modern network administration, the ability to see real-time bandwidth trends, CPU loads, and interface errors can mean the difference between proactive optimization and reactive firefighting. This guide covers the TIG stack (Telegraf, InfluxDB, Grafana) for professional SNMP monitoring.</p>
+                <p>Raw data is useless without visualization. In modern network administration, the ability to see real-time bandwidth trends, CPU loads, and interface errors can mean the difference between proactive optimization and reactive firefighting. This guide covers the TIG stack (Telegraf, InfluxDB, Grafana) for professional SNMP monitoring.</p>
 
                 <h3>1. The Architecture of Modern Monitoring</h3>
                 <p>Simple Network Management Protocol (SNMP) remains the industry standard for gathering metrics from network hardware. However, SNMP itself doesn't store or visualize data. We use a three-tier architecture to build a monitoring powerhouse:</p>
