--- a/blog-12.html
+++ b/blog-12.html
@@ -83,7 +83,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -102,7 +102,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Understanding TCP/IP in 2026: What Still Matters and What Changed</h2>
               
               <div class="content">
-                <p class="lead">The TCP/IP stack has been the bedrock of the internet for over 40 years. While the fundamental four-layer model remains, the way we handle congestion, encryption, and address exhaustion has undergone a radical transformation in the 2020s.</p>
+                <p>The TCP/IP stack has been the bedrock of the internet for over 40 years. While the fundamental four-layer model remains, the way we handle congestion, encryption, and address exhaustion has undergone a radical transformation in the 2020s.</p>
 
                 <h3>1. The Evolution of the Transport Layer: TCP vs. QUIC</h3>
                 <p>For decades, TCP was the undisputed king of reliable transport. However, its "three-way handshake" creates latency that modern apps can't afford. Enter <strong>QUIC (HTTP/3)</strong>. In 2026, QUIC has largely replaced TCP for web traffic because it runs over UDP, reducing connection times and handling "Head-of-Line Blocking" more efficiently.</p>
