--- a/blog-18.html
+++ b/blog-18.html
@@ -78,7 +78,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -97,7 +97,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Windows Server vs Linux Server: Choosing the Right Platform for Your Network</h2>
               
               <div class="content">
-                <p class="lead">In the modern enterprise, the choice between Windows and Linux isn't a battle of "which is better," but a calculation of "which fits the workload." While Windows dominates the identity and corporate office space, Linux powers the vast majority of the world's web and cloud infrastructure.</p>
+                <p>In the modern enterprise, the choice between Windows and Linux isn't a battle of "which is better," but a calculation of "which fits the workload." While Windows dominates the identity and corporate office space, Linux powers the vast majority of the world's web and cloud infrastructure.</p>
 
                 <h3>1. Windows Server: The Enterprise Backbone</h3>
                 <p>Windows Server is the undisputed king of <strong>Directory Services</strong>. If your organization needs to manage thousands of employees, printers, and corporate laptops, Active Directory (AD) is the industry standard. It provides a cohesive ecosystem where Group Policy, DNS, and Identity are tightly integrated.</p>
