--- a/blog-25.html
+++ b/blog-25.html
@@ -78,7 +78,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -97,7 +97,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">Network Security in 2026: Threats, Tools, and Best Practices</h2>
               
               <div class="content">
-                <p class="lead">In 2026, the concept of a static "secure perimeter" has been completely dismantled. The explosion of hybrid cloud environments and edge computing has forced a radical transformation in how we perceive and implement network defense.</p>
+                <p>In 2026, the concept of a static "secure perimeter" has been completely dismantled. The explosion of hybrid cloud environments and edge computing has forced a radical transformation in how we perceive and implement network defense.</p>
 
                 <h3>1. The Emerging Threat Matrix</h3>
                 <p>The primary shift this year is the transition from manual, human-directed attacks to <strong>Autonomous Agentic Threats</strong>. Adversaries now deploy AI entities that can navigate a network, escalate privileges, and exfiltrate data without external instruction.</p>
