--- a/blog-27.html
+++ b/blog-27.html
@@ -77,7 +77,7 @@
             <i class="bi bi-chevron-left me-1"></i> Back to Blogs
           </a>
         </div>
-        <h1>Technical Blog</h1>
+        <h1>Technical Digest</h1>
       </div>
     </section>
 
@@ -96,7 +96,7 @@
               <h2 class="mb-4" style="font-weight: 800; color: var(--heading-color);">AI in Network Security: Smarter Detection and Faster Response</h2>
               
               <div class="content">
-                <p class="lead">As network complexity scales exponentially, human-led security operations centers (SOCs) are facing an impossible task. In 2026, Artificial Intelligence is no longer just a buzzword—it is the backbone of modern network defense, enabling real-time detection and autonomous mitigation.</p>
+                <p>As network complexity scales exponentially, human-led security operations centers (SOCs) are facing an impossible task. In 2026, Artificial Intelligence is no longer just a buzzword—it is the backbone of modern network defense, enabling real-time detection and autonomous mitigation.</p>
 
                 <h3>1. From Reactive to Predictive Security</h3>
                 <p>Traditional network security was reactive: an attack occurred, a signature was identified, and a rule was created. AI flips this model by focusing on <strong>Behavioral Analytics</strong>. By establishing a baseline of "normal" network traffic, machine learning models can identify the subtlest anomalies that suggest a Zero-Day exploit or an advanced persistent threat (APT) is at work.</p>
